Clean up HTTP error responses (#84)
* update api to include http 520 response

* fix error type in rqlite package

* tweak error message in s3 package

* fix error type in generic storage package

* add message to http error + refactor handler errors

* update Go dependencies

* pr: update comment

* Go dependency update

* pr: ty review suggestion

* Revert "Go dependency update"

This reverts commit c16f5c6015c5b28ad725c61627133ccee79f7cd7.

* Revert "update Go dependencies"

This reverts commit 49c5cc3dd8931a69a50ed2ad46eb6f10177d0e3a.
