# api/api.yaml
@@ -1,6 +1,6 @@
 openapi: '3.0.0'
 info:
-  version: 1.2.0
+  version: 1.3.0
   title: ucl-arc-tre-egress
   description: UCL ARC TRE Egress API
   license:
@@ -36,6 +36,8 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/InternalServerError'
+        '520':
+          $ref: '#/components/responses/UnknownError'
 
   /{project-id}/files/{file-id}/approve:
     put:
@@ -60,6 +62,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/InternalServerError'
+        '520':
+          $ref: '#/components/responses/UnknownError'
 
   /{project-id}/files/{file-id}/reject:
     put:
@@ -84,6 +88,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/InternalServerError'
+        '520':
+          $ref: '#/components/responses/UnknownError'
 
   /{project-id}/files/{file-id}:
     get:
@@ -113,6 +119,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/InternalServerError'
+        '520':
+          $ref: '#/components/responses/UnknownError'
 
   /{project-id}/events:
     get:
@@ -351,6 +359,12 @@ components:
             $ref: '#/components/schemas/ErrorResponse'
     InternalServerError:
       description: Unexpected internal server error
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+    UnknownError:
+      description: Unknown internal error
       content:
         application/json:
           schema:
